# Cradle_Selrena

./: .editorconfig  .eslintrc.js  .gitignore  .prettierrc  ARCHITECTURE_OPTIMIZATION_SUMMARY.md  CONFIG_MIGRATION_COMPLETE.md  CONFIG_REFACTOR_COMPLETE.md  CONFIG_REFACTOR_SUMMARY.md  README.md  check_nonascii.py  debug_llm_load.py  debug_tts_ssml.py  install.bat  nx.json  package.json  pnpm-workspace.yaml  pyproject.toml  requirements.in  requirements.txt  start.bat  test_tts_logic.py
configs/: QUICKSTART.md  (+15 more)
core/ai-core/: project.json  pyproject.toml
core/ai-core/src/selrena/: __init__.py  main.py
core/ai-core/src/selrena/application/: active_thought_use_case.py  agent_plan_use_case.py  agent_synthesis_use_case.py  context_allocator.py  memory_sync_use_case.py
core/ai-core/src/selrena/core/: config.py  event_bus.py
core/ai-core/src/selrena/emotion_matrix/: emotion_system.py
core/ai-core/src/selrena/llm_engine/: embedding_engine.py  llm_engine.py  multimodal_router.py
core/ai-core/src/selrena/memory_pipeline/: short_term_memory.py
core/ai-core/src/selrena/persona/: persona_injector.py  persona_knowledge.py
core/ai-core/src/selrena/thought/: thought_pool.py
core/cradle-selrena-core/: project.json  pyproject.toml  requirements.txt
core/cradle-selrena-core/src/selrena/: __init__.py  container.py  main.py
core/cradle-selrena-core/src/selrena/application/: active_thought_use_case.py  agent_plan_use_case.py  base_use_case.py  chat_use_case.py  memory_sync_use_case.py
core/cradle-selrena-core/src/selrena/bridge/: kernel_bridge.py
core/cradle-selrena-core/src/selrena/core/: config.py  event_bus.py  exceptions.py  lifecycle.py
core/cradle-selrena-core/src/selrena/inference/: asr_engine_cpp.py  embedding_engine.py  llm_engine.py  multimodal_router.py  tts_engine_cpp.py
core/native/: CMakeLists.txt
core/native/include/: selrena_native.h
core/native/src/: lib.rs  selrena_native.c
core/native/src/audio/: stt.rs  tts.rs
core/native/src/llm/: ggml_binding.rs  mod.rs
core/native/src/vision/: mod.rs  ocr.rs
cradle-selrena/: ARCHITECTURE_REFACTOR_SUMMARY.md  README.md  pyproject.toml  requirements.txt
cradle-selrena-core/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
cradle-selrena-core/src/selrena/: __init__.py  ai_core.py  container.py  main.py
cradle-selrena-core/src/selrena/adapters/inbound/: kernel_event_adapter.py  lifecycle_adapter.py  perception_adapter.py
cradle-selrena-core/src/selrena/adapters/outbound/: kernel_event_adapter.py  observability_adapter.py
cradle-selrena-core/src/selrena/agent/: command_generator.py  mcp_client.py  tool_registry.py
cradle-selrena-core/src/selrena/application/: active_thought_use_case.py  base_use_case.py  conversation_interaction_use_case.py  emotion_flow_use_case.py  memory_lifecycle_use_case.py  perception_process_use_case.py  persona_consistency_use_case.py  reasoning_decision_use_case.py
cradle-selrena-core/src/selrena/core/: config.py  event_bus.py  exceptions.py  lifecycle.py  resilience.py
cradle-selrena-core/src/selrena/core/observability/: logger.py  meter.py  tracer.py
cradle-selrena-core/src/selrena/domain/: __init__.py
cradle-selrena-core/src/selrena/domain/common/: domain_events.py  exceptions.py  value_objects.py
cradle-selrena-core/src/selrena/domain/emotion/: emotion_events.py  emotion_model.py  emotion_rules.py
cradle-selrena-core/src/selrena/domain/expression/: expression_events.py  persona_validator.py  style_controller.py
cradle-selrena-core/src/selrena/domain/memory/: memory_events.py  memory_model.py  memory_repository.py  memory_rules.py
cradle-selrena-core/src/selrena/domain/reasoning/: brain_router.py  decision_rules.py  intent_model.py  reasoning_events.py
cradle-selrena-core/src/selrena/domain/self/: growth_tracker.py  life_timeline.py  personality_core.py  self_entity.py
cradle-selrena-core/src/selrena/inference/: embedding_engine.py  llm_engine.py  multimodal_engine.py
cradle-selrena-core/src/selrena/plugins/: base_plugin.py  plugin_manager.py
cradle-selrena-core/src/selrena/plugins/builtin/: __init__.py
cradle-selrena-core/src/selrena/plugins/custom/: __init__.py
cradle-selrena-core/src/selrena/ports/: __init__.py
cradle-selrena-core/src/selrena/ports/inbound/: __init__.py  event_port.py  lifecycle_port.py  perception_port.py
cradle-selrena-core/src/selrena/ports/outbound/: __init__.py  inference_port.py  kernel_event_port.py  observability_port.py
cradle-selrena-core/src/selrena/schemas/: domain.py  events.py  payloads.py
cradle-selrena-core/src/selrena/utils/: __init__.py  async_utils.py  string_utils.py  type_utils.py
cradle-selrena-core/tests/: conftest.py
cradle-selrena/data_simple/memory/: 20260308_175711.json  20260308_181239.json  20260308_181316.json  20260308_181423.json  20260308_181506.json  20260308_181704.json  20260308_181747.json
cradle-selrena/docs/: PYTHON_AI_PERFECT_ARCHITECTURE.md
cradle-selrena/examples/: basic_usage.py  config_usage.py
cradle-selrena/src/selrena/: __init__.py  container.py
cradle-selrena/src/selrena/adapters/: __init__.py
cradle-selrena/src/selrena/application/: __init__.py  conversation.py  memory_service.py  reasoning.py
cradle-selrena/src/selrena/core/: __init__.py  ai_service.py  config_manager.py  event_bus_client.py  main_service.py
cradle-selrena/src/selrena/domain/: __init__.py  emotion.py  memory.py  persona.py
cradle-selrena/src/selrena/inference/: __init__.py  audio.py  llm.py  vision.py
cradle-selrena/src/selrena/ports/: __init__.py
cradle-selrena/src/selrena/schemas/: __init__.py  events.py  payloads.py
cradle-selrena/src/selrena/utils/: __init__.py  async_utils.py  config.py  env.py  event_payload.py  exceptions.py  logger.py  path.py  string.py  yaml_io.py
cradle-selrena/tests/: test_config_loading.py  test_prompt_generation.py  verify_prompts.py  verify_visual.py
cradle-selrena/tests/unit/: test_ai_service.py  test_core_functional.py  test_domain_migration.py  test_event_bus_client.py  test_napcat_adapter.py  test_soul_core.py
(+674 files in other folders)
