[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cradle-selrena"
version = "0.1.0"
description = "Cradle_Selrena: 摇篮：月见 — 多模态智能代理框架"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["AI","assistant","napcat","vector-store","chatbot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

# runtime dependencies; keep roughly grouped and alphabetized where sensible
dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
    "pyyaml",
    "loguru",
    "PySide6",
    "openai>=1.0",
    "langchain",
    "langgraph",
    "numpy",
    "pillow",
    "pyautogui",
    "edge-tts",
    "requests",
    "websockets>=11.0.3",  # WebSocket client for Napcat and other services
]

# optional groups (extras) can be added as needed
[project.optional-dependencies]
# dev tools for contributors
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
cradle = "cradle.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cradle*"]

[tool.black]
line-length = 88
target-version = ['py310']
