[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cradle-selrena"
version = "0.1.0"
description = "Cradle_Selrena: 摇篮：月见 — 多模态智能代理框架"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
keywords = ["AI", "assistant", "napcat", "chatbot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 单仓根级元数据——Python 运行时依赖统一由 core/python-soul 管理
dependencies = []

[tool.uv.sources]
cradle-selrena-core = { path = "core/python-soul", editable = true }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [
    "node_modules",
    ".venv",
    ".git",
    "dist",
    "build",
    "runtime",
    "data",
    "logs",
    "assets",
    "docs",
    "scripts",
    "configs",
    "plugins",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
