[project]
name = "cradle-selrena-core"
version = "0.1.0"
description = "Python AI core runtime for Selrena"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "lociere", email = "2674610139@qq.com" },
]

dependencies = [
    "pydantic>=2.7,<3",
    "pyzmq>=26.0,<28",
    "structlog>=24.0,<26",
    "aiosqlite>=0.20,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
selrena-core = "selrena.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["selrena*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
